--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-    datatable.class: Ali\DatatableBundle\Util\Datatable
+    datatable.class: DatatableBundle\Util\Datatable
 
 services:
     datatable:
@@ -8,13 +8,13 @@ services:
         scope: prototype
         
     datatable.twig.extension:
-        class: Ali\DatatableBundle\Twig\Extension\AliDatatableExtension
+        class: DatatableBundle\Twig\Extension\AliDatatableExtension
         arguments: [ @service_container ]
         tags:
             -  { name: twig.extension }
     
     datatable.kernel.listener.terminate:
-        class: Ali\DatatableBundle\Listener\KernelTerminateListener
+        class: DatatableBundle\Listener\KernelTerminateListener
         arguments: [ @service_container ]
         tags:
             - { name: kernel.event_listener, event: kernel.terminate, method: onKernelTerminate }
