--- a/Tests/config/routing.yml
+++ b/Tests/config/routing.yml
@@ -1,9 +1,10 @@
 _homepage:
     pattern:  /
-    defaults: { _controller: AliDatatableBundle:Test:index }
+    defaults: { _controller: DatatableBundle:Test:index }
 _delete:
     pattern:  /
-    defaults: { _controller: AliDatatableBundle:Test:delete }
+    defaults: { _controller: DatatableBundle:Test:delete }
 _edit:
     pattern:  /
-    defaults: { _controller: AliDatatableBundle:Test:edit }
+    defaults: { _controller: DatatableBundle:Test:edit }
+    
