--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ env:
   - SYMFONY_VERSION=v2.2.1
   - SYMFONY_VERSION=origin/master
   
-before_script: php vendor/vendors.php  
+install:  composer install --dev
+
