--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit bootstrap="./Tests/bootstrap.php" colors="true">
+
+    <php>
+        <server name="KERNEL_DIR" value="/Tests/app/" />
+    </php>
+
     <testsuites>
         <testsuite name="DatatableBundle test suite">
             <directory suffix="Test.php">./Tests</directory>
@@ -12,6 +17,7 @@
             <directory>./</directory>
             <exclude>
                 <directory>./Tests</directory>
+                <directory>./vendor</directory>
             </exclude>
         </whitelist>
     </filter>
