--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ php:
   - 5.5  
   - 5.6
   - 7
+
+env:
+  - SYMFONY_VERSION=v2.6
+  - SYMFONY_VERSION=v2.7
+  - SYMFONY_VERSION=v2.8
+  - SYMFONY_VERSION=v3.0
  
 install:  composer install
 
