--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.4
   - 5.5  
   - 5.6
+  - 7.0
 
 
 env:
@@ -11,6 +12,7 @@ env:
   - SYMFONY_VERSION=v2.7
   - SYMFONY_VERSION=v2.8
   - SYMFONY_VERSION=v3.0
- 
+  - SYMFONY_VERSION=v3.1
+
 install: composer --prefer-source install
 
